--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -11,6 +11,7 @@
     <h2>Product' List</h2>
     <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
 
+
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <tr>
@@ -22,6 +23,7 @@
         <tr th:each="product: ${products}">
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
+            <td><a th:href="@{/product/edit/{productId}(productId=${product.productId})}" class="btn btn-info btn-sm">Edit</a></td>
         </tr>
         </tbody>
     </table>
